@@ -50,7 +50,10 @@ version 2.81
 	with the exception that NSEC and NSEC3 RRs must always be signed.
         Thanks to Tore Anderson for spotting and diagnosing the bug.
 
-	
+	Add --dhcp-ignore-clid. This disables reading of DHCP client
+	identifier option (option 61), so clients are only identified by
+	MAC addresses.
+
 version 2.80
 	Add support for RFC 4039 DHCP rapid commit. Thanks to Ashram Method
 	for the initial patch and motivation.
